--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"@keyv/sqlite": "^3.6.7",
 		"@network-utils/arp-lookup": "^2.1.0",
 		"dns2": "^2.1.0",
+		"express": "^4.18.2",
 		"keyv": "^4.5.4"
 	}
 }
